fix whitespace on bottom

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -104,3 +104,7 @@ footer .tagcloud > a {
     max-width: 100%;
     height: auto;
 }
+
+iframe#st_gdpr_iframe {
+    display: none;
+}
